--- a/htmls/home.html
+++ b/htmls/home.html
@@ -184,8 +184,8 @@ C20.8,36.8,20.5,36.8,20.5,36.8z"/>
 </div>
 <div class="small-violin"></div>
 <div class="scroll-text">
-<span>LU DINH LU DINH LU DINH LU DINH LU DINH LU DINH</span>
-<span>LU DINH LU DINH LU DINH LU DINH LU DINH LU DINH</span>
+<span>DINH LU DINH LU DINH LU DINH LU DINH LU DINH LU</span>
+<span>DINH LU DINH LU DINH LU DINH LU DINH LU DINH LU</span>
 </div>
 
 <div class="wrap-content">
@@ -200,7 +200,7 @@ C20.8,36.8,20.5,36.8,20.5,36.8z"/>
 <p><strong>- Năm 2019:</strong> Tốt nghiệp xuất sắc hệ Đại học Violin tại Nhạc Viện TP.HCM</p>
 <p><strong>- Năm 2011 - Năm 2022:</strong> Biểu diễn các event lớn, nhỏ trong nước cũng như nước ngoài.</p>
 <p><strong>- Năm 2023:</strong> Theo học năm nhất chuyên ngành biểu diễn Violin tại Nhạc Viện TP.HCM</p>
-<p>- Với hơn 17 năm gắn bó, Lữ Đinh cùng cây đàn Violin của mình tự tin mang đến cho khán thính giả những cảm xúc tuyệt vời nhất.</p>
+<p>- Với hơn 17 năm gắn bó, cùng 10 năm trong lĩnh vực biểu diễn Violin, Lữ cùng cây đàn Violin của mình tự tin mang đến cho khán thính giả những cảm xúc tuyệt vời nhất.</p>
 </div>
 </div>
 
