--- a/htmls/home.html
+++ b/htmls/home.html
@@ -199,7 +199,7 @@ C20.8,36.8,20.5,36.8,20.5,36.8z"/>
 <p><strong>- Năm 2014:</strong> Tốt nghiệp xuất sắc hệ Trung Cấp Violin dài hạn 9 năm tại Nhạc Viện TP.HCM</p>
 <p><strong>- Năm 2019:</strong> Tốt nghiệp xuất sắc hệ Đại học Violin tại Nhạc Viện TP.HCM</p>
 <p><strong>- Năm 2011 - Năm 2022:</strong> Biểu diễn các event lớn, nhỏ trong nước cũng như nước ngoài.</p>
-<p><strong>- Năm 2023:</strong> Theo học năm nhất chuyên ngành biểu diễn Violin tại Nhạc Viện TP.HCM</p>
+<p><strong>- Năm 2023:</strong> Theo học năm nhất Thạc Sỹ chuyên ngành biểu diễn Violin tại Nhạc Viện TP.HCM</p>
 <p>- Với hơn 17 năm gắn bó, cùng 10 năm trong lĩnh vực biểu diễn Violin, Lữ cùng cây đàn Violin của mình tự tin mang đến cho khán thính giả những cảm xúc tuyệt vời nhất.</p>
 </div>
 </div>
@@ -212,6 +212,7 @@ C20.8,36.8,20.5,36.8,20.5,36.8z"/>
 <div class="box-txt-home-intro ani-item color-black">
 <p>- Được biểu diễn, hoà mình, bay bổng cùng âm nhạc.</p>
 <p>- Sáng tác, viết nhạc, phổ nhạc</p>
+<p>- Truyền được nhiệt huyết, ngọn lửa yêu quý cây đàn Violin đến tất cả mọi người.</p>
 <p>- Du lịch</p>
 <p>- Xem phim [...]</p>
 </div>
