--- a/htmls/home.html
+++ b/htmls/home.html
@@ -196,8 +196,8 @@ C20.8,36.8,20.5,36.8,20.5,36.8z"/>
 <div class="box-txt-home-intro ani-item color-black">
 <p><strong>- Tháng 4-2005:</strong> Bắt đầu theo học Violin tại Nhạc Viện TP.HCM</p>
 <p><strong>- Tháng 6-2005:</strong> Thủ khoa đầu vào chuyên ngành Violin Nhạc Viện TP.HCM năm 2005</p>
-<p><strong>- Năm 2014:</strong> Tốt nghiệp xuất sắc hệ Trung Cấp Violin dài hạn 9 năm tại Nhạc Viện TP.HCM</p>
-<p><strong>- Năm 2019:</strong> Tốt nghiệp xuất sắc hệ Đại học Violin tại Nhạc Viện TP.HCM</p>
+<p><strong>- Năm 2014:</strong> Tốt nghiệp hệ Trung Cấp Violin dài hạn 9 năm tại Nhạc Viện TP.HCM</p>
+<p><strong>- Năm 2019:</strong> Tốt nghiệp hệ Đại học Violin tại Nhạc Viện TP.HCM</p>
 <p><strong>- Năm 2011 - Năm 2022:</strong> Biểu diễn các event lớn, nhỏ trong nước cũng như nước ngoài.</p>
 <p><strong>- Năm 2023:</strong> Theo học năm nhất Thạc Sỹ chuyên ngành biểu diễn Violin tại Nhạc Viện TP.HCM</p>
 <p>- Với hơn 17 năm gắn bó, cùng 10 năm trong lĩnh vực biểu diễn Violin, Lữ cùng cây đàn Violin của mình tự tin mang đến cho khán thính giả những cảm xúc tuyệt vời nhất.</p>
